docs/blog/posts/2024/0023-operational-authentication/kratos-selfservice-ui-node/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-selfservice-ui-node
spec:
  rules:
    - host: auth.localhost.com
      http:
        paths:
          - backend:
              service:
                name: kratos-selfservice-ui-node
                port:
                  name: http
            path: /
            pathType: Prefix
